# Forge

./: .gitignore  CMakeLists.txt  ForgeErrors  LICENSE  README.md  TODO
root/: CMakeLists.txt  engine.hpp  main.cpp
root/include/: command_buffers.hpp  core.hpp  engine.hpp  forge.hpp  forge_vars.hpp  framework.hpp  graphicscard.hpp  logical_devices.hpp  physical_devices.hpp  pipeline.hpp  renderer.hpp  shader.hpp  swapchain.hpp  vertex.hpp  vkcontainer.hpp
root/include/2D/: renderer.hpp
root/include/app/: framework.hpp  renderer.hpp
root/include/archive/: logical_devices.hpp  pipeline.hpp  renderer.hpp  swapchain.hpp  vertex.hpp  vkcontainer.hpp
root/include/core/: core.hpp  graphicscard.hpp
root/shaders/: compile.bat  shader.vert
root/shaders/Assets/: vert.spv
root/src/: command_buffers.cpp  core.cpp  engine.cpp  forge.cpp  forge_vars.cpp  framework.cpp  graphicscard.cpp  logical_devices.cpp  physical_devices.cpp  pipeline.cpp  renderer.cpp  shader.cpp  swapchain.cpp  vertex.cpp  vk_mem_alloc.cpp  vkcontainer.cpp
root/src/2D/: renderer.cpp
root/src/app/: framework.cpp  renderer.cpp
root/src/archive/: logical_devices.cpp  physical_devices.cpp  pipeline.cpp  swapchain.cpp  vertex.cpp
root/src/core/: core.cpp  graphicscard.cpp
sandbox/: CMakeLists.txt  sample.cpp  sandbox.cpp
